sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On PUBLIC shift to state 1
-- On programa shift to state 182

State 1:
programa -> PUBLIC . CLASS ID ACHAVE funcoes MAIN ACHAVE list(declaracao) comandos FCHAVE funcoes FCHAVE EOF [ # ]
-- On CLASS shift to state 2

State 2:
programa -> PUBLIC CLASS . ID ACHAVE funcoes MAIN ACHAVE list(declaracao) comandos FCHAVE funcoes FCHAVE EOF [ # ]
-- On ID shift to state 3

State 3:
programa -> PUBLIC CLASS ID . ACHAVE funcoes MAIN ACHAVE list(declaracao) comandos FCHAVE funcoes FCHAVE EOF [ # ]
-- On ACHAVE shift to state 4

State 4:
programa -> PUBLIC CLASS ID ACHAVE . funcoes MAIN ACHAVE list(declaracao) comandos FCHAVE funcoes FCHAVE EOF [ # ]
-- On PUBLIC shift to state 5
-- On funcoes shift to state 171
-- On funcao shift to state 180
-- On MAIN reduce production funcoes -> 

State 5:
funcao -> PUBLIC . STATIC tipo ID APAR parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC MAIN FCHAVE ]
-- On STATIC shift to state 6

State 6:
funcao -> PUBLIC STATIC . tipo ID APAR parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC MAIN FCHAVE ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On CHAR shift to state 11
-- On BOOLEAN shift to state 12
-- On tipo shift to state 13

State 7:
tipo -> VOID . [ ID ]
-- On ID reduce production tipo -> VOID 

State 8:
tipo -> STRING . [ ID ]
-- On ID reduce production tipo -> STRING 

State 9:
tipo -> INT . [ ID ]
-- On ID reduce production tipo -> INT 

State 10:
tipo -> FLOAT . [ ID ]
-- On ID reduce production tipo -> FLOAT 

State 11:
tipo -> CHAR . [ ID ]
-- On ID reduce production tipo -> CHAR 

State 12:
tipo -> BOOLEAN . [ ID ]
-- On ID reduce production tipo -> BOOLEAN 

State 13:
funcao -> PUBLIC STATIC tipo . ID APAR parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC MAIN FCHAVE ]
-- On ID shift to state 14

State 14:
funcao -> PUBLIC STATIC tipo ID . APAR parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC MAIN FCHAVE ]
-- On APAR shift to state 15

State 15:
funcao -> PUBLIC STATIC tipo ID APAR . parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC MAIN FCHAVE ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On CHAR shift to state 11
-- On BOOLEAN shift to state 12
-- On tipo shift to state 16
-- On parametros shift to state 18
-- On parametro shift to state 168
-- On FPAR reduce production parametros -> 

State 16:
parametro -> tipo . ID [ VIRG FPAR ]
-- On ID shift to state 17

State 17:
parametro -> tipo ID . [ VIRG FPAR ]
-- On VIRG reduce production parametro -> tipo ID 
-- On FPAR reduce production parametro -> tipo ID 

State 18:
funcao -> PUBLIC STATIC tipo ID APAR parametros . FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC MAIN FCHAVE ]
-- On FPAR shift to state 19

State 19:
funcao -> PUBLIC STATIC tipo ID APAR parametros FPAR . ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC MAIN FCHAVE ]
-- On ACHAVE shift to state 20

State 20:
funcao -> PUBLIC STATIC tipo ID APAR parametros FPAR ACHAVE . list(declaracao) comandos FCHAVE [ PUBLIC MAIN FCHAVE ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On CHAR shift to state 11
-- On BOOLEAN shift to state 12
-- On tipo shift to state 21
-- On list(declaracao) shift to state 27
-- On declaracao shift to state 166
-- On WHILE reduce production list(declaracao) -> 
-- On SWITCH reduce production list(declaracao) -> 
-- On RETURN reduce production list(declaracao) -> 
-- On PRINT reduce production list(declaracao) -> 
-- On NOT reduce production list(declaracao) -> 
-- On MENOS reduce production list(declaracao) -> 
-- On LITSTRING reduce production list(declaracao) -> 
-- On LITINT reduce production list(declaracao) -> 
-- On LITFLOAT reduce production list(declaracao) -> 
-- On LITCHAR reduce production list(declaracao) -> 
-- On LITBOOL reduce production list(declaracao) -> 
-- On IF reduce production list(declaracao) -> 
-- On ID reduce production list(declaracao) -> 
-- On FOR reduce production list(declaracao) -> 
-- On FCHAVE reduce production list(declaracao) -> 
-- On APAR reduce production list(declaracao) -> 

State 21:
declaracao -> tipo . separated_nonempty_list(VIRG,ID) PTV [ WHILE VOID SWITCH STRING RETURN PRINT NOT MENOS LITSTRING LITINT LITFLOAT LITCHAR LITBOOL INT IF ID FOR FLOAT FCHAVE CHAR BOOLEAN APAR ]
-- On ID shift to state 22
-- On separated_nonempty_list(VIRG,ID) shift to state 25

State 22:
separated_nonempty_list(VIRG,ID) -> ID . [ PTV ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ PTV ]
-- On VIRG shift to state 23
-- On PTV reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 23:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ PTV ]
-- On ID shift to state 22
-- On separated_nonempty_list(VIRG,ID) shift to state 24

State 24:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ PTV ]
-- On PTV reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 25:
declaracao -> tipo separated_nonempty_list(VIRG,ID) . PTV [ WHILE VOID SWITCH STRING RETURN PRINT NOT MENOS LITSTRING LITINT LITFLOAT LITCHAR LITBOOL INT IF ID FOR FLOAT FCHAVE CHAR BOOLEAN APAR ]
-- On PTV shift to state 26

State 26:
declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV . [ WHILE VOID SWITCH STRING RETURN PRINT NOT MENOS LITSTRING LITINT LITFLOAT LITCHAR LITBOOL INT IF ID FOR FLOAT FCHAVE CHAR BOOLEAN APAR ]
-- On WHILE reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On VOID reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On SWITCH reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On STRING reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On RETURN reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On PRINT reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On NOT reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On MENOS reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On LITSTRING reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On LITINT reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On LITFLOAT reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On LITCHAR reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On LITBOOL reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On INT reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On IF reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On ID reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On FOR reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On FLOAT reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On FCHAVE reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On CHAR reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On BOOLEAN reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On APAR reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 

State 27:
funcao -> PUBLIC STATIC tipo ID APAR parametros FPAR ACHAVE list(declaracao) . comandos FCHAVE [ PUBLIC MAIN FCHAVE ]
-- On WHILE shift to state 28
-- On SWITCH shift to state 82
-- On RETURN shift to state 90
-- On PRINT shift to state 92
-- On NOT shift to state 30
-- On MENOS shift to state 31
-- On LITSTRING shift to state 32
-- On LITINT shift to state 33
-- On LITFLOAT shift to state 34
-- On LITCHAR shift to state 35
-- On LITBOOL shift to state 36
-- On IF shift to state 96
-- On ID shift to state 37
-- On FOR shift to state 101
-- On APAR shift to state 39
-- On variavel shift to state 40
-- On expr shift to state 103
-- On exp_fun shift to state 120
-- On comandos shift to state 164
-- On comando_s shift to state 130
-- On comando_c shift to state 132
-- On comando shift to state 133
-- On cmd_while shift to state 135
-- On cmd_switch shift to state 136
-- On cmd_return shift to state 137
-- On cmd_if shift to state 138
-- On cmd_for shift to state 139
-- On cmd_atrib shift to state 140
-- On FCHAVE reduce production comandos -> 

State 28:
cmd_while -> WHILE . APAR expr FPAR ACHAVE comandos FCHAVE [ WHILE SWITCH RETURN PRINT NOT MENOS LITSTRING LITINT LITFLOAT LITCHAR LITBOOL IF ID FOR FCHAVE BREAK APAR ]
-- On APAR shift to state 29

State 29:
cmd_while -> WHILE APAR . expr FPAR ACHAVE comandos FCHAVE [ WHILE SWITCH RETURN PRINT NOT MENOS LITSTRING LITINT LITFLOAT LITCHAR LITBOOL IF ID FOR FCHAVE BREAK APAR ]
-- On NOT shift to state 30
-- On MENOS shift to state 31
-- On LITSTRING shift to state 32
-- On LITINT shift to state 33
-- On LITFLOAT shift to state 34
-- On LITCHAR shift to state 35
-- On LITBOOL shift to state 36
-- On ID shift to state 37
-- On APAR shift to state 39
-- On variavel shift to state 40
-- On expr shift to state 79
-- On exp_fun shift to state 46

State 30:
expr -> NOT . expr [ VIRG VEZESIGUAL VEZES PTV OULOG NOT MOD MENOSMENOS MENOSIGUAL MENOS MENORIGUAL MENOR MAISMAIS MAISIGUAL MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIVIGUAL DIV DIFER ATRIB ]
-- On NOT shift to state 30
-- On MENOS shift to state 31
-- On LITSTRING shift to state 32
-- On LITINT shift to state 33
-- On LITFLOAT shift to state 34
-- On LITCHAR shift to state 35
-- On LITBOOL shift to state 36
-- On ID shift to state 37
-- On APAR shift to state 39
-- On variavel shift to state 40
-- On expr shift to state 78
-- On exp_fun shift to state 46

State 31:
expr -> MENOS . expr [ VIRG VEZESIGUAL VEZES PTV OULOG NOT MOD MENOSMENOS MENOSIGUAL MENOS MENORIGUAL MENOR MAISMAIS MAISIGUAL MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIVIGUAL DIV DIFER ATRIB ]
-- On NOT shift to state 30
-- On MENOS shift to state 31
-- On LITSTRING shift to state 32
-- On LITINT shift to state 33
-- On LITFLOAT shift to state 34
-- On LITCHAR shift to state 35
-- On LITBOOL shift to state 36
-- On ID shift to state 37
-- On APAR shift to state 39
-- On variavel shift to state 40
-- On expr shift to state 77
-- On exp_fun shift to state 46

State 32:
expr -> LITSTRING . [ VIRG VEZESIGUAL VEZES PTV OULOG NOT MOD MENOSMENOS MENOSIGUAL MENOS MENORIGUAL MENOR MAISMAIS MAISIGUAL MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIVIGUAL DIV DIFER ATRIB ]
-- On VIRG reduce production expr -> LITSTRING 
-- On VEZESIGUAL reduce production expr -> LITSTRING 
-- On VEZES reduce production expr -> LITSTRING 
-- On PTV reduce production expr -> LITSTRING 
-- On OULOG reduce production expr -> LITSTRING 
-- On NOT reduce production expr -> LITSTRING 
-- On MOD reduce production expr -> LITSTRING 
-- On MENOSMENOS reduce production expr -> LITSTRING 
-- On MENOSIGUAL reduce production expr -> LITSTRING 
-- On MENOS reduce production expr -> LITSTRING 
-- On MENORIGUAL reduce production expr -> LITSTRING 
-- On MENOR reduce production expr -> LITSTRING 
-- On MAISMAIS reduce production expr -> LITSTRING 
-- On MAISIGUAL reduce production expr -> LITSTRING 
-- On MAIS reduce production expr -> LITSTRING 
-- On MAIORIGUAL reduce production expr -> LITSTRING 
-- On MAIOR reduce production expr -> LITSTRING 
-- On IGUAL reduce production expr -> LITSTRING 
-- On FPAR reduce production expr -> LITSTRING 
-- On ELOG reduce production expr -> LITSTRING 
-- On DPTOS reduce production expr -> LITSTRING 
-- On DIVIGUAL reduce production expr -> LITSTRING 
-- On DIV reduce production expr -> LITSTRING 
-- On DIFER reduce production expr -> LITSTRING 
-- On ATRIB reduce production expr -> LITSTRING 

State 33:
expr -> LITINT . [ VIRG VEZESIGUAL VEZES PTV OULOG NOT MOD MENOSMENOS MENOSIGUAL MENOS MENORIGUAL MENOR MAISMAIS MAISIGUAL MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIVIGUAL DIV DIFER ATRIB ]
-- On VIRG reduce production expr -> LITINT 
-- On VEZESIGUAL reduce production expr -> LITINT 
-- On VEZES reduce production expr -> LITINT 
-- On PTV reduce production expr -> LITINT 
-- On OULOG reduce production expr -> LITINT 
-- On NOT reduce production expr -> LITINT 
-- On MOD reduce production expr -> LITINT 
-- On MENOSMENOS reduce production expr -> LITINT 
-- On MENOSIGUAL reduce production expr -> LITINT 
-- On MENOS reduce production expr -> LITINT 
-- On MENORIGUAL reduce production expr -> LITINT 
-- On MENOR reduce production expr -> LITINT 
-- On MAISMAIS reduce production expr -> LITINT 
-- On MAISIGUAL reduce production expr -> LITINT 
-- On MAIS reduce production expr -> LITINT 
-- On MAIORIGUAL reduce production expr -> LITINT 
-- On MAIOR reduce production expr -> LITINT 
-- On IGUAL reduce production expr -> LITINT 
-- On FPAR reduce production expr -> LITINT 
-- On ELOG reduce production expr -> LITINT 
-- On DPTOS reduce production expr -> LITINT 
-- On DIVIGUAL reduce production expr -> LITINT 
-- On DIV reduce production expr -> LITINT 
-- On DIFER reduce production expr -> LITINT 
-- On ATRIB reduce production expr -> LITINT 

State 34:
expr -> LITFLOAT . [ VIRG VEZESIGUAL VEZES PTV OULOG NOT MOD MENOSMENOS MENOSIGUAL MENOS MENORIGUAL MENOR MAISMAIS MAISIGUAL MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIVIGUAL DIV DIFER ATRIB ]
-- On VIRG reduce production expr -> LITFLOAT 
-- On VEZESIGUAL reduce production expr -> LITFLOAT 
-- On VEZES reduce production expr -> LITFLOAT 
-- On PTV reduce production expr -> LITFLOAT 
-- On OULOG reduce production expr -> LITFLOAT 
-- On NOT reduce production expr -> LITFLOAT 
-- On MOD reduce production expr -> LITFLOAT 
-- On MENOSMENOS reduce production expr -> LITFLOAT 
-- On MENOSIGUAL reduce production expr -> LITFLOAT 
-- On MENOS reduce production expr -> LITFLOAT 
-- On MENORIGUAL reduce production expr -> LITFLOAT 
-- On MENOR reduce production expr -> LITFLOAT 
-- On MAISMAIS reduce production expr -> LITFLOAT 
-- On MAISIGUAL reduce production expr -> LITFLOAT 
-- On MAIS reduce production expr -> LITFLOAT 
-- On MAIORIGUAL reduce production expr -> LITFLOAT 
-- On MAIOR reduce production expr -> LITFLOAT 
-- On IGUAL reduce production expr -> LITFLOAT 
-- On FPAR reduce production expr -> LITFLOAT 
-- On ELOG reduce production expr -> LITFLOAT 
-- On DPTOS reduce production expr -> LITFLOAT 
-- On DIVIGUAL reduce production expr -> LITFLOAT 
-- On DIV reduce production expr -> LITFLOAT 
-- On DIFER reduce production expr -> LITFLOAT 
-- On ATRIB reduce production expr -> LITFLOAT 

State 35:
expr -> LITCHAR . [ VIRG VEZESIGUAL VEZES PTV OULOG NOT MOD MENOSMENOS MENOSIGUAL MENOS MENORIGUAL MENOR MAISMAIS MAISIGUAL MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIVIGUAL DIV DIFER ATRIB ]
-- On VIRG reduce production expr -> LITCHAR 
-- On VEZESIGUAL reduce production expr -> LITCHAR 
-- On VEZES reduce production expr -> LITCHAR 
-- On PTV reduce production expr -> LITCHAR 
-- On OULOG reduce production expr -> LITCHAR 
-- On NOT reduce production expr -> LITCHAR 
-- On MOD reduce production expr -> LITCHAR 
-- On MENOSMENOS reduce production expr -> LITCHAR 
-- On MENOSIGUAL reduce production expr -> LITCHAR 
-- On MENOS reduce production expr -> LITCHAR 
-- On MENORIGUAL reduce production expr -> LITCHAR 
-- On MENOR reduce production expr -> LITCHAR 
-- On MAISMAIS reduce production expr -> LITCHAR 
-- On MAISIGUAL reduce production expr -> LITCHAR 
-- On MAIS reduce production expr -> LITCHAR 
-- On MAIORIGUAL reduce production expr -> LITCHAR 
-- On MAIOR reduce production expr -> LITCHAR 
-- On IGUAL reduce production expr -> LITCHAR 
-- On FPAR reduce production expr -> LITCHAR 
-- On ELOG reduce production expr -> LITCHAR 
-- On DPTOS reduce production expr -> LITCHAR 
-- On DIVIGUAL reduce production expr -> LITCHAR 
-- On DIV reduce production expr -> LITCHAR 
-- On DIFER reduce production expr -> LITCHAR 
-- On ATRIB reduce production expr -> LITCHAR 

State 36:
expr -> LITBOOL . [ VIRG VEZESIGUAL VEZES PTV OULOG NOT MOD MENOSMENOS MENOSIGUAL MENOS MENORIGUAL MENOR MAISMAIS MAISIGUAL MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIVIGUAL DIV DIFER ATRIB ]
-- On VIRG reduce production expr -> LITBOOL 
-- On VEZESIGUAL reduce production expr -> LITBOOL 
-- On VEZES reduce production expr -> LITBOOL 
-- On PTV reduce production expr -> LITBOOL 
-- On OULOG reduce production expr -> LITBOOL 
-- On NOT reduce production expr -> LITBOOL 
-- On MOD reduce production expr -> LITBOOL 
-- On MENOSMENOS reduce production expr -> LITBOOL 
-- On MENOSIGUAL reduce production expr -> LITBOOL 
-- On MENOS reduce production expr -> LITBOOL 
-- On MENORIGUAL reduce production expr -> LITBOOL 
-- On MENOR reduce production expr -> LITBOOL 
-- On MAISMAIS reduce production expr -> LITBOOL 
-- On MAISIGUAL reduce production expr -> LITBOOL 
-- On MAIS reduce production expr -> LITBOOL 
-- On MAIORIGUAL reduce production expr -> LITBOOL 
-- On MAIOR reduce production expr -> LITBOOL 
-- On IGUAL reduce production expr -> LITBOOL 
-- On FPAR reduce production expr -> LITBOOL 
-- On ELOG reduce production expr -> LITBOOL 
-- On DPTOS reduce production expr -> LITBOOL 
-- On DIVIGUAL reduce production expr -> LITBOOL 
-- On DIV reduce production expr -> LITBOOL 
-- On DIFER reduce production expr -> LITBOOL 
-- On ATRIB reduce production expr -> LITBOOL 
